<resources>
    <string name="app_name">Field Logger</string>
    <string name="conductivityLabel">Conductivity (uS):</string>
    <string name="phLabel">pH:</string>
    <string name="moistureLabel">Moisture (%)</string>
    <string name="disOxyLabel">Dissolved oxygen (ppm):</string>
    <string name="hp1">HP1</string>
    <string name="hp2">HP2</string>
    <string name="fo">FO</string>
    <string name="mz">MZ</string>
    <string name="control">Control</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
</resources>
