<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="HP 1"
        android:textAlignment="center"
        android:textSize="35sp" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/conductivityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conductivityLabel"
            style="@style/mainTextStyle" />

        <EditText
            android:id="@+id/enterConductivity"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="0-1000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/phLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phLabel"
            style="@style/mainTextStyle" />

        <EditText
            android:id="@+id/enterPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="0-14"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/moistureLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moistureLabel"
            style="@style/mainTextStyle" />

        <EditText
            android:id="@+id/enterMoisture"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="0-100"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/disOxyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disOxyLabel"
            style="@style/mainTextStyle" />

        <EditText
            android:id="@+id/enterDisOxy"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="0-100"
            android:layout_weight="3.10"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Log Entry"
        android:id="@+id/saveLogButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Log Entries"
        android:id="@+id/showLogButton"
        android:onClick="showFieldLogs"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/prevButton"
            android:layout_weight="1"
            android:onClick="clickPrevious"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/nextButton"
            android:layout_weight="1"
            android:onClick="clickNext"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/homeButton"
            android:layout_weight="1"
            android:tag="0"
            android:onClick="clickHome"/>
    </LinearLayout>


</LinearLayout>
